--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
+    "crypt-js": "^1.0.4",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "express-cors": "0.0.3",
@@ -14,6 +15,7 @@
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.3.0",
+    "log4js": "^3.0.5",
     "morgan": "~1.9.0"
   }
 }
