--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.3.0",
     "log4js": "^3.0.5",
+    "mongoose": "^5.2.8",
     "morgan": "~1.9.0"
   }
 }
